# 15_Puzzle

./: AbstractController.cpp  AbstractController.h  Algorithms.cpp  Algorithms.h  BoardGenerationOption.h  BoardModel.cpp  BoardModel.h  BoardNode.cpp  BoardNode.h  BoardNodeComparator.cpp  BoardNodeComparator.h  BoardView.cpp  BoardView.h  CMakeLists.txt  FileException.cpp  FileException.h  GameController.cpp  GameController.h  GameSceneView.cpp  GameSceneView.h  GraphicsWidget.h  IConnectable.h  IDisposable.h  IGenericArray.h  MenuController.cpp  MenuController.h  MenuSceneView.cpp  MenuSceneView.h  MoveTileScoreOption.h  NullReferenceException.cpp  NullReferenceException.h  Point.cpp  Point.h  ResourcesOption.h  Scene.cpp  Scene.h  Scenes.h  SearchException.cpp  SearchException.h  SolutionModel.cpp  (+6 more)
ManagersSystem/: IGameManger.h  Managers.cpp  Managers.h  PreferencesManager.cpp  PreferencesManager.h  ProgressManager.cpp  ProgressManager.h  SavingsManager.cpp  SavingsManager.h  SceneManager.cpp  SceneManager.h
